--- a/client_website/public/index.html
+++ b/client_website/public/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div id="pageContent">
-        <div id="loginInfo" class="RHpopup">
+        <div class="RHpopup">
             <div id="headerGroup">
                 <div class="popupHeader">Welcome to Box.</div>
                 <div class="popupSubheader">Please enter your Box #:</div>
