--- a/client_website/page layouts/playerSetup.html
+++ b/client_website/page layouts/playerSetup.html
@@ -11,7 +11,7 @@
 
 <body>
     <div id="pageContent">
-        <div id="loginInfo" class="RHpopup">
+        <div class="RHpopup">
             <div id="headerGroup">
                 <div class="popupHeader">Game found!</div>
                 <div class="popupSubheader">Please enter your name:</div>
