--- a/client_website/page layouts/yourein.html
+++ b/client_website/page layouts/yourein.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="styles/main.css">
-    <link rel="icon" href="assets/icon.ico">
+    <link rel="stylesheet" href="../public/styles/main.css">
+    <link rel="icon" href="../public/assets/icon.ico">
     <title>Box</title>
 </head>
 
@@ -18,5 +18,6 @@
             </div>
         </div>
     </div>
+    <script src="scripts/main.js"></script>
 </body>
 </html>
