printing removed and wrong code fixed

--- a/client_website/page layouts/drawSomeVote.html
+++ b/client_website/page layouts/drawSomeVote.html
@@ -21,6 +21,6 @@
             </div>
         </div>
     </div>
-    <script src="../public/scripts/main.js"></script>
+    <script src="/public/scripts/main.js"></script>
 </body>
 </html>
